--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-    <link rel="icon" href="Images/J.png" />
+    <link rel="icon" href="Images/TalhaFinalT.png" />
     <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
 
-    <title>Jawad Mir | Portfolio</title>
+    <title>Talha Jamil | Portfolio</title>
     <meta charset="utf-8" />
-    <meta property="og:title" content="Jawad Mir | Portfolio">
-    <meta name="keywords" content="Jawad Mir,Portfolio Vinayak Singh,Freelance website developer">
+    <meta property="og:title" content="Talha Jamil | Portfolio">
+    <meta name="keywords" content="Talha Jamil,Portfolio Vinayak Singh,Freelance website developer">
     <meta property="og:description" content="Looking for a talented freelance website developer? Vinayak Singh has the skills and expertise you need to bring your website vision to life. With a wide range of skills including HTML, CSS, JavaScript, and React, as well as expertise in CMS systems like WordPress and Shopify, Contact Vinayak today to get started. Contact now today to get started on your web development project." name="description">
     <meta property="og:image:type" content="image/jpg">
     <meta property="og:image" content="">
